--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@react-three/drei": "^9.96.0",
     "lucide-react": "^0.300.0"
   },
+  "homepage": "https://csgobst.github.io/takkeh_landing_page",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
   "devDependencies": {
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "gh-pages": "^6.1.1"
   }
 }
